[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastflow"
version = "0.0.1"
authors = [
  {name="Alex Kwiatkowski", email="alex+pypi@fremantle.io"},
]
description = "A modern Pythonic workflow and streaming engine"
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license = {text = "MIT License"}
dependencies = [
    "aiokafka[zstd] >=0.12.0",
    "fast-depends >=2.4.12",
    "litestar[prometheus,structlog] >=2.15.0",
    "obstore >=0.5.0",
    "prometheus-client >=0.21.0",
    "pyarrow[flight] ==19.0.*",
    "pydantic >=2.5.0",
    "pydantic-collections >=0.5.0",
    "pydantic-settings >=2.2.1",
    "pydanticutils >=0.0.3",
    "PyYAML >=6.0.0",
    "structlog >=24.4.0",
    "typer >=0.12.0",
    "typerutils >=0.0.1",
    "universal-pathlib >=0.2.0",
    "urllib3 >=1.26.18",
    "uuid6 >=2024.7.10",
    "uvicorn >=0.25.0",
]

[project.urls]
Homepage = "https://github.com/rupurt/fastflow"
Issues = "https://github.com/rupurt/fastflow/issues"

[tool.setuptools]
license-files = []

[tool.pdm.dev-dependencies]
lint = [
    "ruff >=0.3.4",
    "pyright >=1.1.0",
]
test = [
    "requests-mock >=1.11.0",
    "pygments >=2.17.0",
    "pyhamcrest >=2.1.0",
    "pytest >=8.1.0",
    "pytest-asyncio >=0.23.0",
    "pytest-cov >=5.0.0",
    "pytest-recording >=0.13.1",
    "pytest-unordered >=0.6.0",
    "pytest-watcher >=0.4.0",
]
dist = [
    "build >=1.2.1",
    "twine >=5.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.pytest.ini_options]
markers = []
filterwarnings = []
